force-app/main/default/objects/Asset/fields/AdoptionAmount__c.field-meta.xml
<CustomField>
    <fullName>AdoptionAmount__c</fullName>
    <label>採用金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>