force-app/main/default/objects/Asset/fields/AssetNameNum__c.field-meta.xml
<CustomField>
    <fullName>AssetNameNum__c</fullName>
    <displayFormat>{YY}{MM}{DD}{0000}</displayFormat>
    <label>納入商品名用採番</label>
    <type>AutoNumber</type>
</CustomField>