force-app/main/default/objects/Asset/fields/GrossProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitAmount__c</fullName>
    <formula>Price  -  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>粗利益額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>