force-app/main/default/objects/Asset/fields/GrossProfitRate__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitRate__c</fullName>
    <formula>(Price  -  Cost__c) / Price</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>粗利率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>