force-app/main/default/objects/Asset/fields/keiyakukoushinbi__c.field-meta.xml
<CustomField>
    <fullName>keiyakukoushinbi__c</fullName>
    <label>契約更新日</label>
    <type>Date</type>
</CustomField>