force-app/main/default/objects/Asset/fields/keiyakusyuuryoubi__c.field-meta.xml
<CustomField>
    <fullName>keiyakusyuuryoubi__c</fullName>
    <label>契約終了日</label>
    <type>Date</type>
</CustomField>