force-app/main/default/objects/Asset/fields/keizyoubi__c.field-meta.xml
<CustomField>
    <fullName>keizyoubi__c</fullName>
    <label>計上日</label>
    <type>Date</type>
</CustomField>