force-app/main/default/objects/Asset/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>納入商品</relationshipLabel>
    <relationshipName>OpportunityBWYr</relationshipName>
    <type>Lookup</type>
</CustomField>