force-app/main/default/objects/Asset/fields/OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談商品</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>納入商品</relationshipLabel>
    <relationshipName>OpportunityLineItem5jPV</relationshipName>
    <type>Lookup</type>
</CustomField>