force-app/main/default/objects/Asset/fields/PlanFlg__c.field-meta.xml
<CustomField>
    <fullName>PlanFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>計画フラグ</label>
    <type>Checkbox</type>
</CustomField>