force-app/main/default/objects/Asset/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>商品カテゴリ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>