force-app/main/default/objects/Asset/fields/seikyubi__c.field-meta.xml
<CustomField>
    <fullName>seikyubi__c</fullName>
    <label>請求日</label>
    <type>Date</type>
</CustomField>