force-app/main/default/objects/Asset/fields/SL_cloud_ID__c.field-meta.xml
<CustomField>
    <fullName>SL_cloud_ID__c</fullName>
    <label>クラウドID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>