force-app/main/default/objects/Asset/fields/SL_Maintenance_ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>SL_Maintenance_ContractEndDate__c</fullName>
    <label>保守契約終了日</label>
    <type>Date</type>
</CustomField>