force-app/main/default/objects/Asset/fields/SL_remarks__c.field-meta.xml
<CustomField>
    <fullName>SL_remarks__c</fullName>
    <label>SL_備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>