force-app/main/default/objects/Asset/fields/SL_SalesManagement__c.field-meta.xml
<CustomField>
    <fullName>SL_SalesManagement__c</fullName>
    <formula>IF (  ISBLANK(syukkabi__c) 
			,IF (ISBLANK(keiyakukoushinbi__c) , syokaikeiyakubi__c , keiyakukoushinbi__c )
			,syukkabi__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上管理用_SL</label>
    <type>Date</type>
</CustomField>