force-app/main/default/objects/Asset/fields/syokaikeiyakubi__c.field-meta.xml
<CustomField>
    <fullName>syokaikeiyakubi__c</fullName>
    <label>初回契約日</label>
    <type>Date</type>
</CustomField>