force-app/main/default/objects/Asset/fields/syukkabi__c.field-meta.xml
<CustomField>
    <fullName>syukkabi__c</fullName>
    <label>出荷日</label>
    <type>Date</type>
</CustomField>