force-app/main/default/objects/Asset/recordTypes/Achievements.recordType-meta.xml
<RecordType>
    <fullName>Achievements</fullName>
    <active>true</active>
    <label>実績</label>
</RecordType>