force-app/main/default/objects/Asset/recordTypes/Target.recordType-meta.xml
<RecordType>
    <fullName>Target</fullName>
    <active>true</active>
    <label>目標</label>
</RecordType>