force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>GrossProfitAmount__c</columns>
    <columns>GrossProfitRate__c</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <filterScope>Everything</filterScope>
    <label>すべての納入商品</label>
</ListView>